ready for pypi push, just need to tar.gz and stuff

--- a/changelog
+++ b/changelog
@@ -32,6 +32,7 @@
 - fixed imports by removing jupyter notebook inline stuff
 
 # 0.1.2
+
 4/17/17
 
 ### Added
@@ -39,3 +40,11 @@
 
 ### Improved
 - analysis.py - updated code to use new ndreg and new ndio
+
+# 0.1.4
+
+4/20/17 blaze it
+
+### Improved
+- fixed using float as list index issue in analysis.get_regions()
+- added a few more print statements to track progress of pipeline
