--- a/tests/Centroids Test.ipynb
+++ b/tests/Centroids Test.ipynb
@@ -12,6 +12,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Running the Centroids function\n",
+    "\n",
+    "Should output in the format:\n",
+    "\n",
+    "region: [x, y, z, count]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -452,13 +463,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "## [Centroids Plot](http://nbviewer.jupyter.org/github/alee156/clviz/blob/master/tests/output/s3617_to_ara3_centoids.html)"
+   ]
   }
  ],
  "metadata": {
